drafts: Fix message header overlapping outline.

--- a/web/styles/app_components.css
+++ b/web/styles/app_components.css
@@ -938,8 +938,6 @@ div.overlay {
 
         &.active {
             outline: 2px solid hsl(215deg 47% 50%);
-            /* this offset ensures no gap between the blue box and the draft in active state */
-            outline-offset: -1px;
             border-radius: 7px;
         }
 
